fixed overflow

--- a/front/src/html.css
+++ b/front/src/html.css
@@ -2,7 +2,6 @@ html {
     background-color: transparent;
     background-image: url("../public/Room Pixel Art.jpeg");
     width: 100%;
-    background-size: cover;
     background-repeat: no-repeat;
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
